# 3d_scanner

src/: CMakeLists.txt
src/ar_track_alvar/: CMakeLists.txt
src/ar_track_alvar/include/ar_track_alvar/: ARTagCostFunctor.h  Camera.h  DetectFrame.h  Marker.h  MultiMarker.h  MultiProductParameterization.h
src/ar_track_alvar/src/: Camera.cpp  DetectFrame.cpp  MultiProductParameterization.cpp
src/scanner/: CMakeLists.txt  PtCloudReconstructor.cpp  PtCloudReconstructor.h  scanner.cpp
src/scanner/include/: ModelPlaque.h  PlaqueLocalizer.h  PtCloudReconstructor.h  RigidCostFunctor.h  ScannerUtils.h
src/scanner/src/: ModelPlaque.cpp  PlaqueLocalizer.cpp  PtCloudReconstructor.cpp  ScannerUtils.cpp  scanner.cpp
